data/derived/sp14/progs/unify/prog2963.ml.out
Characters 37-61:
  let stringOfList f l = sepConcat ";" (List.map(fun c -> c l));;
                                       ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type ('a -> 'b) list -> 'b list
       but an expression was expected of type string list
